--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,3 +72,12 @@ body {
   align-items: center;
   background-color: var(--background);
 }
+
+.fading {
+  backdrop-filter: blur(33.3px);
+  -webkit-backdrop-filter: blur(33.3px);
+  -webkit-mask-image: linear-gradient(#000, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(#000, rgba(0, 0, 0, 0));
+  background-color: var(--background);
+  rotate: 180deg;
+}
